fix: nav-contacts mobile vertical align

--- a/assets/sass/components/_navbar.scss
+++ b/assets/sass/components/_navbar.scss
@@ -24,8 +24,11 @@
   left: 0;
 
   li {
-    display: inline;
     float: none;
+
+    @media #{$medium-and-up} {
+      display: inline;
+    }
   }
 
   @media #{$large-and-up} {
